--- a/ifgdt/hypr/override.d/apps.conf
+++ b/ifgdt/hypr/override.d/apps.conf
@@ -4,5 +4,7 @@
 exec-once = $run_app syncthingtray-qt6 --wait
 # open rgb sakura theme
 exec-once = $run_app openrgb -p Sakura
+# password manager
+exec-once = $run_app bitwarden-desktop
 # XPPen drawing table
 # exec-once = $run_app QT_QPA_PLATFORM="xcb" /usr/lib/pentablet/PenTablet.sh /mini
