feat(dotbot): update to v1.24.0 for latest features
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/hypr/conf.d/settings.conf
+++ b/dot_config/hypr/conf.d/settings.conf
@@ -107,12 +107,11 @@ dwindle {
     preserve_split = no
     # 0 -> split follows mouse, 1 -> always split to the left (new = left or top) 2 -> always split to the right (new = right or bottom)
     force_split = 2
-
-    # no_gaps_when_only = 1
 }
 
 master {
-    # no_gaps_when_only = 1
+    orientation = center
+    slave_count_for_center_master = 0
 }
 
 gestures {
