--- a/dot_config/hypr/conf.d/rules.conf
+++ b/dot_config/hypr/conf.d/rules.conf
@@ -21,3 +21,7 @@ windowrule = bordersize 0, floating:0, onworkspace:w[tg1]
 windowrule = rounding 0, floating:0, onworkspace:w[tg1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
 windowrule = rounding 0, floating:0, onworkspace:f[1]
+
+# fake fullscreen
+windowrule = fullscreenstate 0 1,class:(firefox|librewolf|vesktop|discord)
+windowrule = syncfullscreen 0,class:(firefox|librewolf|vesktop|discord)
