feat(install): symlink hypr configs per hostname
Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/noctalia/settings.json
+++ b/dot_config/noctalia/settings.json
@@ -431,7 +431,7 @@
         "tooltipsEnabled": true
     },
     "wallpaper": {
-        "directory": "/home/joao/Pictures/Wallpapers",
+        "directory": "/home/joao/.local/share/wallpaper",
         "enableMultiMonitorDirectories": false,
         "enabled": true,
         "fillColor": "#000000",
