--- a/ifg/hypr/override.d/apps.conf
+++ b/ifg/hypr/override.d/apps.conf
@@ -1,9 +1,7 @@
-# ifgdt apps
+# ifg apps
 
 # backups
 exec-once = $run_app syncthingtray-qt6 --wait
-# open rgb sakura theme
-exec-once = $run_app openrgb -p Sakura
 # password manager
 exec-once = $run_app bitwarden-desktop
 # XPPen drawing table
