--- a/ifg/hypr/override.d/monitors.conf
+++ b/ifg/hypr/override.d/monitors.conf
@@ -5,3 +5,5 @@ monitor=DP-2,highres,0x0,1,transform,1
 # dummy plug
 #monitor=DP-3,1920x1080@60,0x0,1,transform,0
 monitor=DP-3,disable
+
+monitor=eDP-1,prefered,auto,1
