refactor(hypr): migrate to structured rule syntax
Adopt Hyprland's new block-based window and layer rule format
for improved readability and maintainability. Move the
no-border-on-floating setting from global config to a targeted
window rule to maintain the same visual behavior while using
the new syntax conventions.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/dot_config/vicinae/settings.json
+++ b/dot_config/vicinae/settings.json
@@ -19,7 +19,7 @@
    "launcher_window": {
       "opacity": 0.95,
       "client_side_decorations": {
-         "enabled": false
+         "enabled": true
       }
    }
 }
