--- a/dot_config/hypr/conf.d/rules.conf
+++ b/dot_config/hypr/conf.d/rules.conf
@@ -1,27 +1,82 @@
 # See https://wiki.hyprland.org/Configuring/Window-Rules
-windowrule = suppressevent maximize, class:.* # You'll probably like this.
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+  name = disable-maximize-animation
+  match:class = .*
+  suppress_event = maximize
+}
+windowrule {
+  name = disable-minimize-animation
+  match:class = ^$
+  match:title = ^$
+  match:xwayland = true
+  match:float = true
+  match:fullscreen = false
+  match:pin = false
+  no_focus = on
+}
 
-windowrule = workspace special:thunderbird silent, class:^(org.mozilla.Thunderbird)$
+windowrule {
+  name = no-border-when-only
+  match:float = true
+  border_size = 0
+}
+
+# special workspaces
+windowrule {
+  name = thunderbird-workspace
+  match:class = ^(org.mozilla.Thunderbird)$
+  workspace = special:thunderbird silent
+}
 
 # xwaylandvideobridge hide
-windowrule = opacity 0.0 override, class:^(xwaylandvideobridge)$
-windowrule = noanim, class:^(xwaylandvideobridge)$
-windowrule = noinitialfocus, class:^(xwaylandvideobridge)$
-windowrule = maxsize 1 1, class:^(xwaylandvideobridge)$
-windowrule = noblur, class:^(xwaylandvideobridge)$
+windowrule {
+  name = xwaylandvideobridge-hide
+  match:class = ^(xwaylandvideobridge)$
+  opacity = 0.0 override
+  no_anim = on
+  no_initial_focus = on
+  max_size = 1 1
+  no_blur = on
+}
 
 # "Smart gaps" / "No gaps when only"
 workspace = w[t1], gapsout:0, gapsin:0
 workspace = w[tg1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
-windowrule = bordersize 0, floating:0, onworkspace:w[t1]
-windowrule = rounding 0, floating:0, onworkspace:w[t1]
-windowrule = bordersize 0, floating:0, onworkspace:w[tg1]
-windowrule = rounding 0, floating:0, onworkspace:w[tg1]
-windowrule = bordersize 0, floating:0, onworkspace:f[1]
-windowrule = rounding 0, floating:0, onworkspace:f[1]
+windowrule {
+  name = smart-gaps-t1
+  match:workspace = w[t1]
+  match:float = false
+  border_size = 0
+  rounding = 0
+}
+windowrule {
+  name = smart-gaps-tg1
+  match:workspace = w[tg1]
+  match:float = false
+  border_size = 0
+  rounding = 0
+}
+windowrule {
+  name = smart-gaps-f1
+  match:workspace = f[1]
+  match:float = false
+  border_size = 0
+  rounding = 0
+}
 
 # fake fullscreen
-windowrule = fullscreenstate 0 1,class:(firefox|librewolf|vesktop|discord)
-windowrule = syncfullscreen 0,class:(firefox|librewolf|vesktop|discord)
+windowrule {
+  name = fake-fullscreen
+  match:class = (firefox|librewolf|vesktop|discord)
+  fullscreen_state = 0 1
+  sync_fullscreen = off
+}
+
+# vicinae
+layerrule {
+  name = vicinae
+  blur = on
+  ignore_alpha = 0
+  match:namespace = vicinae
+}
