refactor: remove gh-extension dotbot plugin
- Eliminate dependency on dotbot-gh-extension submodule.
- Enforce C locale for package list sorting to ensure consistent
  ordering across different system locales.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -69,14 +69,17 @@
             glob: true
             path: ifgdt/hypr/override.d/*
 
-- ghe:
-    - github/gh-copilot
-
 - shell:
     - [
         update-desktop-database ~/.local/share/applications/,
         Updating desktop entries database,
       ]
     - [./gen_scripts_readme.sh, Generating scripts Readme]
-    - [pacman -Qenq | sort >pacman_native, Saving native package list]
-    - [pacman -Qemq | sort >pacman_foreign, Saving foreign package list]
+    - [
+        pacman -Qenq | LC_COLLATE=C sort >pacman_native,
+        Saving native package list,
+      ]
+    - [
+        pacman -Qemq | LC_COLLATE=C sort >pacman_foreign,
+        Saving foreign package list,
+      ]
