--- a/dot_config/noctalia/pam/password.conf
+++ b/dot_config/noctalia/pam/password.conf
@@ -1,3 +1,4 @@
-#auth sufficient pam_fprintd.so max-tries=1
 # only uncomment this if you have a fingerprint reader
-# auth required pam_unix.so
+auth sufficient pam_fprintd.so max-tries=1
+auth sufficient pam_u2f.so
+auth required pam_unix.so
